# ScubaDiver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  engine.cpp
framework/: color.h  debug.h  engine.h  font.cpp  font.h  fontRenderer.cpp  shader.cpp  shader.h
res/shaders/: shape.frag  shape.vert
shapes/: shape.cpp  shape.h
src/: main.cpp
src/framework/: debug.cpp  engine.cpp  engine.h  fontRenderer.h  player.cpp  player.h  shader.cpp  shader.h  shaderManager.cpp  shaderManager.h
src/shapes/: rect.cpp  rect.h  shape.cpp  shape.h
